# ClaudeDirector

./: .coveragerc  .cursorrules  .gitignore  .pre-commit-config.yaml  .pre-commit-config.yaml.backup  =23.2.0  BACKWARDS_COMPATIBILITY_TEST_RESULTS.md  CHANGELOG.md  CI_FIXES_WORKING_DOC.md  CLAUDE.md  CLAUDEDIRECTOR_CLEANUP_ANALYSIS.md  CLEANUP_AUDIT_REPORT.md  DATA_PRESERVATION_PROTOCOL.md  DEVELOPMENT.md  GETTING_STARTED.md  IMPORT_FIX_ANALYSIS.md  PERFORMANCE_P0_OPTIMIZATION_ANALYSIS.md  PHASE10_FINAL_ARCHITECTURE_POLISH_PLAN.md  PHASE11_ADVANCED_AI_INTELLIGENCE_PLAN.md  PHASE12_MCP_BY_DEFAULT_DESIGN.md  PHASE12_TECHNICAL_STORIES.md  PHASE12_USER_STORIES.md  PHASE13_TECHNICAL_STORIES.md  PHASE13_USER_STORIES.md  PHASE1_ASSESSMENT_COMPLETE.md  PHASE1_COMPLETION_SUMMARY.md  PHASE2_DOCUMENTATION_CLEANUP.md  PHASE2_PROGRESS.md  PHASE3A_COMPREHENSIVE_ARCHITECTURE_EVALUATION.md  PHASE3A_EVALUATION_REPORT.md  PHASE3_AI_VERBOSITY_CLEANUP.md  PHASE4_ARCHITECTURE_PLAN.md  PHASE4_CLEANUP_TRACKER.md  PHASE4_FOLDER_STRUCTURE_CLEANUP.md  PHASE5_1_PERFORMANCE_OPTIMIZATION_PLAN.md  PHASE5_1_PERFORMANCE_OPTIMIZATION_RESULTS.md  PHASE5_2_STRUCTURE_CLEANUP_PLAN.md  PHASE5_3_BLOCKING_ISSUES_RESOLUTION.md  PHASE5_3_FUNCTIONAL_ORGANIZATION_PLAN.md  PHASE5_PERFORMANCE_ARCHITECTURE_OPTIMIZATION.md  (+44 more)
.claudedirector/: .superclaude-metadata.json  ASSISTANT_GUARDRAILS.md  CURSOR_INTEGRATION.md  CURSOR_WORKSPACE_GUIDE.md  ENHANCED_FRAMEWORK_STATUS.md  PHASE7_TRACKING.md  demo_enhanced_diego.py  demo_multi_persona.py  pyproject.toml  regression_test.py  simple_test.py  test-runner.sh  (+2 more)
(+1545 files in other folders)
