[build-system]
requires = ["setuptools>=45", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "claudedirector"
version = "1.0.0"
description = "ClaudeDirector AI Strategic Leadership Framework"
authors = [{name = "Chris Cantu", email = "chris.cantu@example.com"}]
license = {text = "MIT"}
requires-python = ">=3.8"
dependencies = [
    "pydantic>=2.0.0",
    "pyyaml>=6.0",
    "typing-extensions"
]

[tool.setuptools]
packages = ["claudedirector"]
package-dir = {"claudedirector" = "lib"}

[tool.setuptools.package-data]
claudedirector = ["**/*.py", "**/*.yaml", "**/*.yml", "**/*.json", "**/*.md", "**/*.txt"]
